[package]
name = "testgtk"
version = "0.1.0"
authors = ["Roberto Perez <robj.perez@gmail.com>"]
#edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "^0", features = ["png"] }

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

